--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@
 
 # input/output files
 *.ini
+*.cfg
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
